# local-web-agent

./: .gitignore  Makefile  README.md  pyproject.toml  run_vllm.sh  vllm_config.yaml
efficient_web_agent/: README.md  __init__.py  agent.py  browser.py  cli.py  context.py  models.py  observability.py  page_index.py  settings.example.yaml  settings.py  websearch.py
tests/: test_agent_setup.py  test_browser_controller.py  test_context.py  test_observability.py  test_page_index.py  test_settings.py  test_websearch.py
